# synchronicity

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  Makefile  README.md  SUPPORT.md  SYNCHRONICITY2.md  TODO.md  conftest.py  descoverloads.py  idea.py  mise.toml  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  synchronicity.py  test_pickle.py  test_synchronicity.py
.github/: pull_request_template.md
.github/workflows/: check.yml  ci.yml  codeql.yml  publish.yml
oldtests/: async_wrap_test.py  asynccontextmanager_test.py  docstring_test.py  generators_test.py  helper_methods_test.py  inspect_test.py  nowrap_test.py  pickle_test.py  synchronicity_test.py  translate_test.py  type_stub_e2e_test.py  type_stub_translation_test.py  warnings_test.py
oldtests/support/: _shutdown_ctx_mgr.py
oldtests/type_stub_helpers/: e2e_example_impl.py  e2e_example_type_assertions.py
playground/: _my_library.py  err.py  my_library.py  usage.py
scripts/: benchmark.py
src/synchronicity/: __init__.py  annotations.py  async_utils.py  async_wrap.py  callback.py  cli.py  combined_types.py  descriptor.py  exceptions.py  module.py  synchronizer.py  type_stubs.py  types.py
src/synchronicity2/: __init__.py  cli.py  compile.py  descriptor.py  module.py  synchronizer.py  wrappers.py
synchronicity/: __init__.py  annotations.py  async_utils.py  async_wrap.py  callback.py  combined_types.py  contextlib.py  emit_stub.py  exceptions.py  genstub.py  interface.py  overload_tracking.py  synchronizer.py  tracebacks.py  tracking_overload.py  type_stubs.py  utils.py
test/: _forker.py  _gevent.py  _shutdown.py  _shutdown_ctxmgr.py  annotations_test.py  async_constructor_test.py  async_wrap_test.py  asynccontextmanager_test.py  callback_test.py  codegen_integration_test.py  compile_sync_function_test.py  conftest.py  docstring_test.py  e2e_genstub_test.py  exception_test.py  fork_test.py  generators_test.py  genstub_test.py  getattr_test.py  gevent_test.py  helper_methods_test.py  inspect_test.py  mark_test.py  metaclass_test.py  nowrap_test.py  pickle_test.py  shutdown_test.py  synchronicity_test.py  test_asynccontextmanager.py  test_generators.py  test_inheritance.py  test_metaclass.py  test_pickle.py  test_synchronicity.py  test_tracebacks.py  threading_test.py  tracebacks_test.py  translate_test.py  translation_integration_test.py  type_stub_e2e_test.py  (+3 more)
test/genstub_helpers/: e2e_example_export.py  e2e_example_impl.py  e2e_example_type_assertions.py  some_mod.py
test/integration/: conftest.py  conftest.py.bak  test_async_context_manager.py  test_callback_translation.py  test_class_with_inheritance.py  test_class_with_self_references.py  test_class_with_translation.py  test_classmethod_staticmethod.py  test_classproperty_class.py  test_codegen_execution.py  test_cross_module_wrapper_resolution.py  test_custom_iterators.py  test_decorator_factory.py  test_descriptor_dunder.py  test_dynamic_attr.py  test_event_loop_check.py  test_functions_with_typevars.py  test_generic_class.py  test_manual_nowrap.py  test_multi_synchronizer.py  test_multifile.py  test_nested_generators.py  test_overloads.py  test_property_class.py  test_renamed_exports.py  test_same_object_two_types.py  test_sandboxlib.py  test_sequence_callable_annotations.py  test_simple_class.py  test_simple_function.py  test_staticmethod_method_local_typevar.py  test_two_way_generator.py  test_type_checking.py  test_union_translation.py  test_utils.py  (+2 more)
(+162 files in other folders)
