[project]
name = "synchronicity"
version = "0.8.1"
description = "Export blocking and async library versions from a single async implementation"
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

dependencies = ["sigtools==4.0.1", "typing_extensions>=4.6"]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["synchronicity*"]

[tool.ruff]
line-length = 120
exclude = ['.venv', '.git', '__pycache__', 'build', 'dist']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["synchronicity"]
extra-standard-library = ["pytest"]
