[project]
name = "synchronicity"
version = "0.8.3"
description = "Export blocking and async library versions from a single async implementation"
readme = "README.md"
authors = [
    { name = "Modal Labs" }
]
requires-python = ">=3.8"
dependencies = [
    "sigtools>=4.0.1",
    "typing-extensions>=4.12.2",
]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
exclude = ['.venv', '.git', '__pycache__', 'build', 'dist']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["synchronicity"]
extra-standard-library = ["pytest"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",
]

[tool.uv]
dev-dependencies = [
    "gevent>=24.2.1",
    "mypy>=1.13.0",
    "mypy-extensions>=1.0.0",
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
