[project]
name = "synchronicity"
version = "0.11.1"
description = "Export blocking and async library versions from a single async implementation"
readme = "README.md"
authors = [
    { name = "Modal Labs" }
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.12.2",
]

classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
compile = [
    "sigtools>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
exclude = ['.venv', '.git', '__pycache__', 'build', 'dist']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["synchronicity"]
extra-standard-library = ["pytest"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "sigtools>=4.0.1",
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "mypy-extensions>=1.0.0",
    "mypy>=1.13.0",
    "ruff>=0.11.13",
]
test = [
    "console-ctrl>=0.1.0",
    "gevent>=24.2.1; python_version < '3.13'",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-markdown-docs>=0.7.1",
]


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
